fixed checkbox alignment

--- a/client/main1.css
+++ b/client/main1.css
@@ -132,6 +132,9 @@ hr {
 
 
 /* checkbox */
+.checkbox-custom {
+  margin-left: 10px;
+}
 .checkbox-label input{
   position: absolute;
   opacity: 0;
@@ -140,7 +143,7 @@ hr {
 
 .checkbox-label .checkbox-custom {
   position: absolute;
-  top: -8px;
+  top: -5px;
   left: 2px;
   height: 20px;
   width: 20px;
